# Council-for-distributed-decision-making

./: .gitignore  README.md
initial-approach/Additional Agents/: README.md  langgraph.json  pyproject.toml
initial-approach/Additional Agents/council/: climate_agent.py  graph.py  infrastructure_agent.py  judge_agent.py  linguistic_agent.py  llm.py  meta_agent.py  orchestrator_agent.py
initial-approach/Additional Agents/evaluation/: graph.py  loader.py  metrics.py  report.py  tracer.py
initial-approach/Additional Agents/geoguessr_rag/: chunker.py
initial-approach/Optimized Prompts/: README.md  evaluate.py  georc_test.py  langgraph.json  plonkit_meta.json  pyproject.toml  run_eval.sh  run_eval_gpu.sh  run_georc_test_gpu.sh
initial-approach/Optimized Prompts/council/: botanics_agent.py  cultural_agent.py  graph.py  infrastructure_agent.py  judge_agent.py  landscape_agent.py  linguistic_agent.py  llm.py  regulatory_agent.py
initial-approach/Optimized Prompts/evaluation/: graph.py  metrics.py  runner.py
initial-approach/Optimized Prompts/geoguessr_rag/: chunker.py  config.py  embedder.py  retriever.py
vlm-tournament-only/: README.md  pyproject.toml  requirements.txt
vlm-tournament-only/analysis/: gt_pipeline_analysis.txt
vlm-tournament-only/eval_tourn/: README.md  __main__.py  _style.py  agents.py  anchoring.py  calibration.py  country_centroids.json  eval_500.py  funnel.py  geo.py  heatmap.py  influence.py  judge.py  judge_aggregate.py  judge_aggregate_tournament.py  judge_tournament.py  loader.py  rag_utility.py  render_html.py  report.py  run_local_stage1.sh
vlm-tournament-only/eval_tourn/cluster_results/: calibration_metrics.json  dynamics_metrics.json  geo_metrics.json
vlm-tournament-only/eval_tourn/templates/: report.html.j2
vlm-tournament-only/results/1NJsXTxIF9GGMDxC_3/: result.json
vlm-tournament-only/results/1NJsXTxIF9GGMDxC_4/: result.json
vlm-tournament-only/results/2xnQdwiCve2rHWVt_1/: result.json
vlm-tournament-only/results/2xnQdwiCve2rHWVt_2/: result.json
vlm-tournament-only/results/2xnQdwiCve2rHWVt_3/: result.json
vlm-tournament-only/scripts/: eval_500.py
vlm-tournament-only/slurm/: chain_uc3.sh  run_council_uc3.sh  run_eval_uc3.sh  run_eval_uc3_qwen.sh  setup_uc3.sh
vlm-tournament-only/vlm_council/: __init__.py  analyze_rounds_tournament.py  batch.py  evaluate.py  graph.py  image_utils.py  rag_toolbox.py  regions.py  run.py  state.py  tournament.py
(+6983 files in other folders)
