[project]
name = "vlm-council-tournament-only"
version = "0.1.0"
description = "VLM Council for GeoGuessr, Tournament Only (single-elimination bracket after prefilters)"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "vllm>=0.8.0",
]

[project.optional-dependencies]
eval = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pycountry>=23.12",
    "openai>=1.0",
    "scipy>=1.12",
    "jinja2>=3.1",
    "pydantic>=2.0",
]
