[project]
name = "llm-council-agent-orchestration-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3",
    "langchain-ollama>=0.1",
    "langchain-core>=0.3.72,<1.0.0",
    "pydantic>=2.7",
    "click>=8.1",
    "chromadb>=1.0.0,<2.0.0",
    "ollama>=0.6.1",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.0",
    "ddgs>=8.0",
    "reverse_geocoder>=1.5",
    "pycountry>=24.6",
    "rich>=13.0",
    "pysqlite3-binary>=0.5.4; sys_platform == 'linux'",
    "python-dotenv>=1.0",
    "Pillow>=10.0.0",
    "transformers>=4.45.0,<4.52.0",
    "torch>=2.1.0",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "nest-asyncio>=1.6.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "geopandas>=1.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["council", "geoguessr_rag"]
